<resources>
    <string name="app_name">ELFEE</string>

    <string-array name="selectState">
        <item>Delhi</item>
        <item>Tamil Nadu</item>
        <item>Madhya Pardesh</item>
        <item>Kerala</item>

    </string-array>

    <string name="facebook_app_id">471685326903296</string>
    <string name="fb_login_protocol_scheme">fb471685326903296</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_am_donor">I AM DONOR\nमैं दाता हूँ</string>
    <string name="i_am_needy">I AM NEEDY\nमैं जरूरतमंद हूं</string>
    <string name="for_donor">For Donors\nदाताओं के लिए</string>
    <string name="donor_text">ELFEE किसी भी अज्ञात व्यक्ति द्वारा किए गए धोखाधड़ी के लिए जिम्मेदार नहीं है।</string>
    <string name="needy_text">ELFEE किसी भी अज्ञात व्यक्ति द्वारा किए गए धोखाधड़ी के लिए जिम्मेदार नहीं है।</string>
    <string name="for_needy">For Needy\nजरूरतमंदों के लिए</string>
    <string name="ask_for_help">Ask\nfor\nHelp</string>
    <string name="tap_to_view_profile">tap to view profile</string>
    <string name="call_me">CALL ME</string>
    <string name="contact_me">CONTACT ME</string>
    <string name="views"> views</string>
    <string name="ask_help">Ask Help</string>
    <string name="tap_to_enter">tap to enter</string>
    <string name="tap_to_change">tap to change</string>
    <string name="how_for_need_in_short">How for need (in short)</string>
    <string name="need_max_500_characters">Need (max. 500 characters)</string>
    <string name="category">Category</string>
    <string name="tap_to_choose">tap to choose</string>
    <string name="submit">SUBMIT</string>
    <string name="edit_help">Edit Help</string>
    <string name="update">UPDATE</string>
    <string name="login_with_phone">login with phone</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signup">Signup</string>
    <string name="enter_mobile_number">ENTER MOBILE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="already_a_member">Already a member?</string>
    <string name="choose_a_username">CHOOSE A USERNAME</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="language">Language</string>
    <string name="my_account">My Account</string>
    <string name="my_posts">My Posts</string>
    <string name="notifications">Notifications</string>
    <string name="followers">Followers</string>
    <string name="location">Location</string>
    <string name="location2">Location : </string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>
    <string name="notice">Notice</string>
    <string name="profile">Profile</string>
    <string name="your_name">Your name</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_whatsapp_number">Your whatsapp number</string>
    <string name="your_guardian_name">Your guardian name</string>
    <string name="his_her_photo">His/her photo</string>
    <string name="his_her_phone_number">His/her phone number</string>
    <string name="your_aadhar_card_number">Your aadhar card number</string>
    <string name="your_aadhar_card_photo">Your aadhar card photo</string>
    <string name="front">front</string>
    <string name="back">back</string>
    <string name="your_electricity_bill_gas_bill_or_any_other_govt_bill_photo_with_address">Your electricity bill/ gas bill or any other govt. bill photo with address</string>
    <string name="your_d_o_b">Your D.O.B.</string>
    <string name="your_profession">Your profession</string>
    <string name="your_address">Your residential address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="tap_to_enter1">tap to enter</string>
    <string name="upload_your_photo1">Upload your photo</string>
    <string name="your_phone_numberq">Your phone number</string>
    <string name="enter_your_whatsapp_number1">Enter your whatsapp number</string>
    <string name="enter_your_guardian_name1">Enter your guardian name</string>
    <string name="upload_his_her_photo1">Upload his/her photo</string>
    <string name="enter_his_her_phone_number1">Enter his/her phone number</string>
    <string name="enter_your_aadhar_card_number1">Enter your aadhar card number</string>
    <string name="upload_your_aadhar_card_photo1">Upload your aadhar card photo</string>
    <string name="upload_your_electricity_bill_gas_bill_or_any_other_govt_bill_photo_with_address1">Upload your electricity bill/ gas bill or any other govt. bill photo with address</string>
    <string name="enter_your_d_o_b1">Enter your D.O.B.</string>
    <string name="enter_your_profession1">Enter your profession</string>
    <string name="enter_your_address1">Enter your address</string>
    <string name="forgot_password">Forgot password</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="send1">SEND</string>
    <string name="enter_your_mobile_number_we_ll_send_you_password_on_mobile1">Enter your mobile number, we\'ll send you password on mobile</string>
    <string name="all_categories">All Categories</string>
    <string name="my_helps">My Helps</string>
    <string name="nearby2km">nearby 2 KM</string>
    <string name="nearby5km">nearby 5 KM</string>
    <string name="nearby10km">nearby 10 KM</string>
    <string name="nearby20km">nearby 20 KM</string>
    <string name="nearby50km">nearby 50 KM</string>
    <string name="kkyycc">Please complete your KYC first</string>
    <string name="permission">This app requires location permissions to be granted</string>
    <string name="how_for_need">How for need : </string>
    <string name="needd"><![CDATA[Need : </br>]]></string>
    <string name="catt">"Category : "</string>
    <string name="addrreess">Address : </string>
    <string name="this_help_has_completed">Complete this help</string>
    <string name="ok">OK</string>
    <string name="your_help_has_been_posted_successfully">Your help has been posted successfully</string>
    <string name="your_help_has_been_updated_successfully">your help has been updated successfully</string>
    <string name="datee">Date : </string>
    <string name="donor_details">Donor details</string>
    <string name="donor_s_phone">Donor\'s phone</string>
    <string name="active">ACTIVE</string>
    <string name="completed">COMPLETED</string>
    <string name="default_notification_channel_id" translatable="false">123</string>


</resources>
